Add HTML for nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo"></div>
+        <div class="menu">
+            <ul>
+                <li>Link one</li>
+                <li>Link two</li>
+                <li>Link three</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
