Add HTML for hero and features

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"></div>
+        <div class="logo">Header Logo</div>
         <div class="menu">
             <ul>
                 <li>Link one</li>
@@ -18,5 +18,37 @@
             </ul>
         </div>
     </nav>
+
+    <section class="hero">
+        <div class="hero-text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the mlain title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="header-img">
+            <img src="" alt="" />
+        </div>
+    </section>
+
+
+    <section class="featured">
+        <h2>Some random information.</h2>
+        <div class="card">
+            <img src="" alt="feature 1">
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="" alt="feature 2">
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="" alt="feature 3">
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="" alt="feature 4">
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+    </section>
 </body>
 </html>
