--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<!-- NAV SECTION-->
+
     <nav>
         <div class="logo">Header Logo</div>
         <div class="menu">
@@ -18,6 +21,8 @@
             </ul>
         </div>
     </nav>
+
+<!-- HERO SECTION-->
 
     <section class="hero">
         <div class="hero-text">
@@ -30,6 +35,7 @@
         </div>
     </section>
 
+<!-- FEATURES SECTION-->
 
     <section class="featured">
         <h2>Some random information.</h2>
@@ -50,5 +56,29 @@
             <p>This is some subtext under an illustration or image</p>
         </div>
     </section>
+
+<!-- QUOTE SECTION-->
+
+    <section class="quotes">
+        <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">Thor, God of Thunder</p>
+    </section>
+
+<!-- CTA SECTION-->
+
+    <section class="cta">
+        <div class="calltoaction">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button over there!</p>
+            <button>Sign up</button>
+        </div>
+    </section>
+
+<!-- FOOTER SECTION-->
+
+<section id="footer">
+    <p>Copyright C The Odin Project 2023</p>
+</section>
+
 </body>
 </html>
