--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,14 +24,14 @@
 
 <!-- HERO SECTION-->
 
-    <section class="hero">
+    <section id="hero">
         <div class="hero-text">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the mlain title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign Up</button>
         </div>
-        <div class="header-img">
-            <img src="" alt="" />
+        <div class="hero-img">
+            <img src="./img/ai-gen-img.png" alt="Cyber bikers" />
         </div>
     </section>
 
