--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="hero">
         <div class="hero-text">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the mlain title. It's a smaller font and the color is lower contrast.</p>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign Up</button>
         </div>
         <div class="hero-img">
