--- a/index.html
+++ b/index.html
@@ -37,36 +37,36 @@
 
 <!-- FEATURES SECTION-->
 
-    <section class="featured">
+    <section id="featured">
         <h2>Some random information.</h2>
         <div class="card">
-            <img src="" alt="feature 1">
+            <img src="./img/dox1.png" alt="feature 1">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="feature 2">
+            <img src="./img/dox2.png" alt="feature 2">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="feature 3">
+            <img src="./img/dox3.png" alt="feature 3">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="feature 4">
+            <img src="./img/dox4.png" alt="feature 4">
             <p>This is some subtext under an illustration or image</p>
         </div>
     </section>
 
 <!-- QUOTE SECTION-->
 
-    <section class="quotes">
+    <section id="quotes">
         <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="author">Thor, God of Thunder</p>
     </section>
 
 <!-- CTA SECTION-->
 
-    <section class="cta">
+    <section id="cta">
         <div class="calltoaction">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button over there!</p>
