Styled the quotes section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 <!-- QUOTE SECTION-->
 
     <section id="quotes">
-        <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="author">Thor, God of Thunder</p>
+        <div class="container">
+            <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">Thor, God of Thunder</p>
+        </div>
     </section>
 
 <!-- CTA SECTION-->
