--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
 
     <section id="cta">
         <div class="calltoaction">
+            <div class="container">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button over there!</p>
+            </div>
             <button>Sign up</button>
         </div>
     </section>
