Finished cta and footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!-- FOOTER SECTION-->
 
 <section id="footer">
-    <p>Copyright C The Odin Project 2023</p>
+    <p>The Odin Project 2023</p>
 </section>
 
 </body>
